# testing-framework-poc

./: README.md
.claude/: settings.local.json
.claude/commands/: mutation-test.md
samples/dotnet/: .gitignore  MutationTestSample.sln
samples/dotnet/src/OrderService/: OrderService.cs
samples/dotnet/tests/OrderService.Tests/: OrderService.Tests.csproj  OrderServiceTests.cs
samples/java/: pom.xml
samples/java/.claude/: settings.local.json
samples/java/.claude/commands/: mutation-test.md
samples/java/src/main/java/com/example/: OrderService.java
samples/java/src/test/java/com/example/: OrderServiceTest.java
samples/nodejs/: .gitignore  package-lock.json  package.json
samples/nodejs/.claude/commands/: mutation-test.md
samples/nodejs/reports/mutation/: mutation.json
samples/nodejs/src/: orderService.js
samples/nodejs/tests/: orderService.test.js
samples/python/: .gitignore  pyproject.toml
samples/python/src/: order_service.py
samples/python/tests/: test_order_service.py
